# midas-journal-285

Source/: CMakeLists.txt  GaetanSuggestions.txt  itkAutumnColormapFunctor.h  itkAutumnColormapFunctor.txx  itkBlueColormapFunctor.h  itkBlueColormapFunctor.txx  itkColormapFunctor.h  itkCoolColormapFunctor.h  itkCoolColormapFunctor.txx  itkCopperColormapFunctor.h  itkCopperColormapFunctor.txx  itkCustomColormapFunctor.h  itkCustomColormapFunctor.txx  itkGreenColormapFunctor.h  itkGreenColormapFunctor.txx  itkGreyColormapFunctor.h  itkGreyColormapFunctor.txx  itkHSVColormapFunctor.h  itkHSVColormapFunctor.txx  itkHotColormapFunctor.h  itkHotColormapFunctor.txx  itkJetColormapFunctor.h  itkJetColormapFunctor.txx  itkOverUnderColormapFunctor.h  itkOverUnderColormapFunctor.txx  itkRedColormapFunctor.h  itkRedColormapFunctor.txx  itkScalarToRGBColormapImageFilter.h  itkScalarToRGBColormapImageFilter.txx  itkScalarToRGBColormapImageFilterTest.cxx  itkSpringColormapFunctor.h  itkSpringColormapFunctor.txx  itkSummerColormapFunctor.h  itkSummerColormapFunctor.txx  itkWinterColormapFunctor.h  itkWinterColormapFunctor.txx
__MACOSX/: ._Source
__MACOSX/Source/: ._CMakeLists.txt  ._CustomColormaps  ._GaetanSuggestions.txt  ._IJMacros.txt  ._itkAutumnColormapFunctor.h  ._itkAutumnColormapFunctor.txx  ._itkBlueColormapFunctor.h  ._itkBlueColormapFunctor.txx  ._itkColormapFunctor.h  ._itkCoolColormapFunctor.h  ._itkCoolColormapFunctor.txx  ._itkCopperColormapFunctor.h  ._itkCopperColormapFunctor.txx  ._itkCustomColormapFunctor.h  ._itkCustomColormapFunctor.txx  ._itkGreenColormapFunctor.h  ._itkGreenColormapFunctor.txx  ._itkGreyColormapFunctor.h  ._itkGreyColormapFunctor.txx  ._itkHSVColormapFunctor.h  ._itkHSVColormapFunctor.txx  ._itkHotColormapFunctor.h  ._itkHotColormapFunctor.txx  ._itkJetColormapFunctor.h  ._itkJetColormapFunctor.txx  ._itkOverUnderColormapFunctor.h  ._itkOverUnderColormapFunctor.txx  ._itkRedColormapFunctor.h  ._itkRedColormapFunctor.txx  ._itkScalarToRGBColormapImageFilter.h  ._itkScalarToRGBColormapImageFilter.txx  ._itkScalarToRGBColormapImageFilterTest.cxx  ._itkSpringColormapFunctor.h  ._itkSpringColormapFunctor.txx  ._itkSummerColormapFunctor.h  ._itkSummerColormapFunctor.txx  ._itkWinterColormapFunctor.h  ._itkWinterColormapFunctor.txx
__MACOSX/Source/CustomColormaps/: ._bone.txt  ._colorcube.txt  ._cool.txt  ._flag.txt  ._lines.txt  ._pink.txt  ._prism.txt  ._vga.txt
